johnlimadev/force-app/main/default/objects/Account/fields/CNPJ_2__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_2__c</fullName>
    <label>CNPJ_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>