johnlimadev/force-app/main/default/objects/Account/fields/Email_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Key Contact?</label>
    <type>Checkbox</type>
</CustomField>