johnlimadev/force-app/main/default/objects/Account/fields/First_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Email__c</fullName>
    <label>First Contact Email</label>
    <type>Email</type>
</CustomField>