johnlimadev/force-app/main/default/objects/Account/fields/First_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Name__c</fullName>
    <label>First Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>