johnlimadev/force-app/main/default/objects/Account/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <label>Objeto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>