johnlimadev/force-app/main/default/objects/Account/fields/Responsavel_administrativo__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsável administrativo da auto escola.</description>
    <label>Responsável administrativo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>