johnlimadev/force-app/main/default/objects/Account/recordTypes/Administrador_de_Auto_escola.recordType-meta.xml
<RecordType>
    <fullName>Administrador_de_Auto_escola</fullName>
    <active>true</active>
    <label>Administrador de Auto-escola</label>
</RecordType>