johnlimadev/force-app/main/default/objects/Account/recordTypes/Aluno.recordType-meta.xml
<RecordType>
    <fullName>Aluno</fullName>
    <active>true</active>
    <label>Aluno</label>
</RecordType>