johnlimadev/force-app/main/default/objects/Account/recordTypes/Auto_escola.recordType-meta.xml
<RecordType>
    <fullName>Auto_escola</fullName>
    <active>true</active>
    <label>Auto-escola</label>
</RecordType>