johnlimadev/force-app/main/default/objects/Account/listViews/Auto_escolas.listView-meta.xml
<ListView>
    <fullName>Auto_escolas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Auto_escola</value>
    </filters>
    <label>Auto-escolas</label>
</ListView>